--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,12 +273,11 @@
 .border {
   border: 2px solid #2c49fe;
   border-radius: 5px;
-  width: 90%;
+  padding: 0 15px;
 }
 .border2 {
   border: 2px solid #2c49fe;
   border-radius: 5px;
-  width: 40%;
 }
 .bg_clr1 {
   background-color: #2c49fe;
@@ -590,6 +589,9 @@
     padding-left: 12px;
     padding-right: 12px;
   }
+  .mt20 {
+    margin-top: 20px;
+  }
   .mt_40 {
     margin-top: 16px;
   }
@@ -673,8 +675,12 @@
     padding-left: 12px;
     padding-right: 12px;
   }
+
   .flex-column {
     flex-direction: unset;
+  }
+  .d-flex {
+    display: flex;
   }
 
   .col_sm_3 {
